# firefly-preimporter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  README.md  brew-setup.sh  config.example.toml  install.sh  pyproject.toml  pyrightconfig.json  tox.ini
.github/workflows/: ci.yml  release.yml
homebrew/: README.md  firefly-preimporter.rb.template  update_resources.py
src/firefly_preimporter/: __init__.py  account_matcher.py  cli.py  config.py  detect.py  firefly_api.py  firefly_payload.py  models.py  output.py  uploader.py  utils.py
src/firefly_preimporter/processors/: __init__.py  csv_processor.py  ofx_processor.py
stubs/ofxtools/: Parser.pyi  Types.pyi
stubs/ofxtools/models/: base.pyi
stubs/requests/: __init__.pyi  exceptions.pyi
tests/: test_account_matcher.py  test_cli.py  test_config.py  test_csv_processor.py  test_detect.py  test_firefly_api.py  test_firefly_payload.py  test_ofx_processor.py  test_output.py  test_package.py  test_uploader.py
tests/integration/: conftest.py  test_ai_matcher.py  test_firefly_api.py
