[project]
name = "firefly-preimporter"
version = "0.2.2"
description = "Data preparation helpers for Firefly imports."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "H" }
]
dependencies = [
  "requests>=2.32",
  "ofxtools>=0.9",
]

[project.urls]
Homepage = "https://github.com/hgonzale/firefly-preimporter"
Issues = "https://github.com/hgonzale/firefly-preimporter/issues"

[project.scripts]
firefly-preimporter = "firefly_preimporter.cli:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firefly_preimporter"]
include = ["src/firefly_preimporter/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
  "src/firefly_preimporter",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.uv]
package = true
cache-dir = ".uv-cache"
default-groups = ["dev"]

# Development dependency group definition (see https://docs.astral.sh/uv/reference/settings/#dependency-groups)
[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6.9",
  "tox>=4.18",
  "tox-uv>=1.11",
  "pyright>=1.1.379",
]

[tool.ruff]
src = ["src", "tests", "stubs"]
show-fixes = true
line-length = 120

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "C90",
  "COM812",
  "D",
  "DTZ",
  "EM",
  "PERF",
  "PLR",
  "T20",
  "TRY",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SLF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["firefly_preimporter"]

[tool.coverage.report]
fail_under = 85
show_missing = true
